--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,7 @@ a:visited {
     background-attachment:fixed 
 }
 .main_body {
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
     margin: auto;
     display: flex;
@@ -23,20 +23,21 @@ a:visited {
     justify-content: space-around;
     align-items: center;
     position: relative;
-    /* background-color: skyblue; */
+    overflow-x: hidden;
 }
 .min_box {
     width: 800px;
     height: 300px;
-    margin-top: 25px;
-    background-color: red;
+    margin-top: 55px;
+    background-color: rgba(255, 255, 255, 0.8);
+    /* box-shadow: 2px 2px 2px 1px rgba(255, 255, 255, 0.3); */
+    border: 1px solid #fff;
+    border-radius: 10px;
     transform: translateX(400%);
-    /* opacity: 0.5; */
-    transition: transform 0.7s ease;
+    transition: transform 0.5s ease;
 }
 .main_body .min_box:nth-of-type(even) {
     transform: translateX(-400%);
-    /* opacity: 0.5; */
 }
 .bst_box .main_body .show {
     /* opacity: 0.9; */
@@ -44,7 +45,7 @@ a:visited {
 }
 .right_sideBar {
     position: absolute;
-    top: 74px;
+    top: 130px;
     right: 50px;
     width: 300px;
     height: 500px;
@@ -100,6 +101,7 @@ a:visited {
     width: 250px;
     height: 30px;
     font-size: 20px;
+    color: rgb(240, 190, 198);
     /* background: linear-gradient(to right, red, blue);
         -webkit-background-clip: text;
         color: transparent; */
